hphp/hack/test/typecheck/reactive/test_mutable_return10.php.exp
File "test_mutable_return10.php", line 10, characters 7-7:
Class B does not correctly implement all required members  (Typing[4217])
File "test_mutable_return10.php", line 10, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "test_mutable_return10.php", line 12, characters 19-19:
Member f has the wrong type
File "test_mutable_return10.php", line 5, characters 19-19:
This is marked <<__MutableReturn>>.
File "test_mutable_return10.php", line 12, characters 19-19:
This is not marked <<__MutableReturn>>.
